--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="description" content="{{ page.description | default: site.description }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
   
@@ -16,7 +16,7 @@
     {% include header.html %}
     {% include hero.html %}
   </section>
-    {% include notice.html %}
+    {% include notice.html %} 
     <section class="container">
       <div class="content">
         {{ content }}
@@ -29,8 +29,7 @@
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', '{{ site.google_analytics }}', 'auto');
+        ga('create', '{{ site.google_analytics }}', 'auto'); 
         ga('send', 'pageview');
       </script>
     {% endif %}
