--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,16 +2,12 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
-
-{% seo %}
     <meta name="description" content="{{ page.description | default: site.description }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link href="{{ "/assets/css/style.css" | relative_url }}" rel="stylesheet">
   </head>
   <body>
-  
-
   <section class="hero is-info is-medium is-bold">
     {% include header.html %}
     {% include hero.html %}
