--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="description" content="{{ page.description | default: site.description }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="{{ "/assets/css/style.css" | relative_url }}" rel="stylesheet">
+    <link href="{{ "/css/style.css?v=" | append: site.github.build_revision | relative_url}}" rel="stylesheet">
   </head>
   <body>
   <section class="hero is-info is-medium is-bold">
