--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -1,7 +1,4 @@
-// Import the initial variables
-@import "bulma/utilities/initial-variables"
-
-// Variables
-
-// Import the rest of Bulma
-@import "bulma/bulma"
+---
+---
+@import "variable"
+@import "bulma"
