--- a/_sass/bulma.sass
+++ b/_sass/bulma.sass
@@ -1,8 +1,8 @@
 @charset "utf-8"
 /*! bulma.io v0.6.0 | MIT License | github.com/jgthms/bulma */
-@import "bulma/utilities/_all"
-@import "bulma/base/_all"
-@import "bulma/elements/_all"
-@import "bulma/components/_all"
-@import "bulma/grid/_all"
-@import "bulma/layout/_all"
+@import "bulma_sass/utilities/_all"
+@import "bulma_sass/base/_all"
+@import "bulma_sass/elements/_all"
+@import "bulma_sass/components/_all"
+@import "bulma_sass/grid/_all"
+@import "bulma_sass/layout/_all"
