--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,37 +1,25 @@
-<div class="hero-head">
-  <nav class="navbar">
-    <div class="container">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="../">
-          <img src="http://bulma.io/images/bulma-type-white.png" alt="Logo">
+<nav class="navbar is-primary">
+  <div class="container">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="/">
+        <img src="assets/images/logo.png" alt="Logo">
+      </a>
+      <span class="navbar-burger burger" data-target="navbarMenu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </span>
+    </div>
+    <div id="navbarMenu" class="navbar-menu">
+      <div class="navbar-end">
+        {% assign pages = site.html_pages | sort:"order" %} {% for navbarItem in pages %} {% if navbarItem.draft != true %}
+        <a class="navbar-item {% if navbarItem.url == page.url %}is-active{% endif %} {% if navbarItem.color %}is-{{navbarItem.color}}{% endif %}"
+          href="{{navbarItem.url}}">
+          {{ navbarItem.title }}
         </a>
-        <span class="navbar-burger burger" data-target="navbarMenu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </span>
-      </div>
-      <div id="navbarMenu" class="navbar-menu">
-        <div class="navbar-end">
-          <a class="navbar-item is-active">
-            Home
-          </a>
-          <a class="navbar-item">
-            Examples
-          </a>
-          <a class="navbar-item">
-            Documentation
-          </a>
-          <span class="navbar-item">
-            <a class="button is-white is-outlined is-small" href="https://github.com/dansup/bulma-templates/blob/master/templates/hero.html">
-              <span class="icon">
-                <i class="fa fa-github"></i>
-              </span>
-              <span>View Source</span>
-            </a>
-          </span>
-        </div>
+        {% endif %} {% endfor %}
       </div>
     </div>
-  </nav>
-</div>
+  </div>
+  </div>
+</nav>
