--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,11 +1,16 @@
-<div class="hero-body">
-  <div class="container has-text-centered">
-    <h1 class="title">
-      The new standard in &lt;insert industry here&gt;
-    </h1>
-    <h2 class="subtitle">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </h2>
+<section class="hero page-title {% if page.hero == nil and page.color %}is-{{page.color}}{% else %}is-primary{% endif %} {% if page.hero %}is-{{page.hero}}{% endif %} is-bold"
+  {% if page.image %} style="background:    linear-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
+  ), url('{{page.image}}') center center; background-size:cover;" {% endif %}>
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <h1 class="title">
+        {{page.title}}
+      </h1>
+      <h2 class="subtitle">
+        {{page.subtitle}}
+      </h2>
+    </div>
   </div>
-</div>
+</section>
