--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,32 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="{{ "/assets/css/styles.css?v=" | append: site.github.build_revision | relative_url}}" rel="stylesheet">
+    <script src="/assets/js/script.js"></script>
   </head>
   <body>
-  <section class="hero is-info {% if page.hero %}is-{{page.hero}}{% endif %} is-bold"
-  {% if page.image %} 
-    style="background: url('{{page.image}}') center center; background-size:cover;"
-  {% endif %}
-  >
     {% include header.html %}
     {% include hero.html %}
-  </section>
     {% include notice.html %} 
-    <section class="container">
+    <section class="container section page-content">
       <div class="content">
         {{ content }}
       <div>
     </section>
     {% include footer.html %}
+
     {% if site.google_analytics %}
-      <script type="text/javascript">
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', '{{ site.google_analytics }}', 'auto'); 
-        ga('send', 'pageview');
-      </script>
+      {% include googleAnalytics.html %}
+    {% endif %}
+
+    {% if site.facebook_app_id %}
+      {% include facebookApi.html %}
     {% endif %}
   </body>
 </html>
